src/pages/Cart/CartPage.scss
.cart-page-wrapper {
  ion-card {
    background: #ffffff;
    ion-card-content {
      padding: 0px;
    }
    .cart-inner-body {
      position: relative;
      display: flex;
      padding: 15px;
    }
    .item-image-wrapper {
      border: 0.5px solid #000000;
      box-sizing: border-box;
      border-radius: 5px;
      width: 59px;
      max-width: 60px;
      height: 59px;
      max-height: 60px;
    }
    .details-wrapper {
      margin-left: 10px;
      .item-name {
        font-style: normal;
        font-weight: 600;
        font-size: 14px;
        line-height: 17px;
        color: #000000;
      }
      .item-varient {
        font-style: normal;
        font-weight: 500;
        font-size: 10px;
        line-height: 12px;
        color: #000000;
        opacity: 0.5;
        position: absolute;
        bottom: 35px;
      }
      .item-price {
        font-weight: 500;
        font-size: 14px;
        line-height: 17px;
        color: #000000;
        position: absolute;
        bottom: 33px; //12px;
      }
    }
    .button-wrapper {
      position: absolute;
      top: 0;
      right: 5px;
      ion-fab-button {
        --background: #004777;
        width: 16px;
        height: 16px;
      }
    }
  }
  .page-header {
    padding: 20px;
    position: relative;
    top: 15px;
    ion-text {
      font-style: normal;
      font-weight: 600;
      font-size: 16px;
      line-height: 20px;
      color: #ffffff;
    }
  }
}
.footer-wrapper {
  .price-section {
    display: grid;
    margin-left: 30px;
    .price-label {
      font-style: normal;
      font-weight: 500;
      font-size: 12px;
      line-height: 15px;
      /* identical to box height */

      color: #ffffff;
    }

    .price-text {
      font-style: normal;
      font-weight: bold;
      font-size: 16px;
      line-height: 20px;
      margin-top: 5px;

      color: #ffffff;
    }
  }

  .checkout-btn-wrapper {
    position: absolute;
    right: 10px;
    bottom: 10px;
    ion-button {
      font-weight: 500;
      font-size: 15px;
      line-height: 17px;
      color: #ffffff;
    }
  }
}

.empty-cart-section {
  display: grid;
  margin-left: 30px;

  .empty-cart {
    font-style: normal;
    font-weight: 400;
    font-size: 12px;
    line-height: 15px;
    color: #141313;
    padding-top: 20px;
    padding-bottom: 20px;
  }
}

